# evemarket

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  plan.md
python/: pyproject.toml
python/orchestrator/: __init__.py  bridge.py  config.py  db.py  display_tiers.py  esi_client.py  esi_continuous_worker.py  esi_entity_resolver.py  esi_gateway.py  esi_market_adapter.py  esi_rate_limiter.py  eve_constants.py  evewho_adapter.py  evewho_alliance_lookup_runner.py  health.py  horizon.py  http_client.py  influx.py  influx_export.py  influx_inspect.py  influx_validate.py  influx_writer.py  item_scope.py  job_context.py  job_result.py  job_runner.py  job_utils.py  json_utils.py  killmail_backfill_runner.py  logging_utils.py  loop_runner.py  main.py  model_store.py  neo4j.py  php_runner.py  processor_registry.py  rebuild_data_model.py  redis_client.py  redis_keys.py  scheduler_pressure.py  (+8 more)
python/orchestrator/jobs/: __init__.py  _fit_clustering.py  activity_priority_summary_sync.py  alliance_current_sync.py  behavioral_scoring.py  (+103 more)
python/tests/: test_alliance_dossiers.py  test_battle_stats_ledger.py  test_compute_processor_routing.py  test_detect_backfill_complete.py  test_display_tiers.py  test_esi_market_adapter.py  test_esi_rate_limiter.py  test_horizon.py  test_influx_inspect.py  test_json_utils.py  test_killmail_r2z2_stream.py  test_market_comparison.py  test_python_sync_processor_parity.py  test_rebuild_data_model.py  test_sync_processors.py  test_theater_engagement_expansion.py  test_theater_side_determination.py  test_threat_corridors.py
(+362 files in other folders)
